# flexnet

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  run_iwyu.sh
cmake/: Exports.cmake  (+4 more)
examples/server/: CMakeLists.txt
examples/server/ServerSharedLib/registry/: main_loop_registry.cc  main_loop_registry.hpp
examples/server/ServerSharedLib/state/: app_state.cc  app_state.hpp
examples/server/codegen/: static_plugins.hpp.in
examples/server/plugin_AsioContextThreads/src/: AsioContextThreads.cc
examples/server/plugin_AsioContextThreads/src/net/: asio_threads_manager.hpp
examples/server/plugin_BasicConsoleCommands/: README.md
examples/server/plugin_BasicConsoleCommands/src/: BasicConsoleCommands.cc
examples/server/plugin_ConsoleTerminal/: README.md
examples/server/plugin_ConsoleTerminal/src/: ConsoleTerminal.cc
examples/server/plugin_ExtraLogging/: README.md
examples/server/plugin_ExtraLogging/conf/: ExtraLogging.conf
examples/server/plugin_ExtraLogging/src/: ExtraLogging.cc
examples/server/plugin_NetworkEntity/src/: NetworkEntity.cc  network_entity_plugin.cc  network_entity_plugin.hpp  network_entity_updater.cc  network_entity_updater_on_sequence.cc  network_entity_updater_on_sequence.hpp
examples/server/plugin_SignalHandler/: README.md
examples/server/plugin_SignalHandler/conf/: SignalHandler.conf
examples/server/plugin_SignalHandler/src/: SignalHandler.cc
examples/server/plugin_TcpServer/conf/: TcpServer.conf
examples/server/plugin_TcpServer/src/: TcpServer.cc
examples/server/plugins/: README.md
examples/server/plugins/plugin_ActionRecorder/: README.md
examples/server/plugins/plugin_ActionRecorder/conf/: ActionRecorder.conf
examples/server/plugins/plugin_ActionRecorder/src/: main_plugin_constants.cc  main_plugin_constants.hpp  main_plugin_interface.cc  main_plugin_interface.hpp  main_plugin_logic.cc  main_plugin_logic.hpp  register_plugin.cc
examples/server/plugins/plugin_AsioContextThreads/: README.md
examples/server/plugins/plugin_AsioContextThreads/conf/: AsioContextThreads.conf
examples/server/plugins/plugin_AsioContextThreads/src/: main_plugin_constants.cc  main_plugin_constants.hpp  main_plugin_interface.cc  main_plugin_interface.hpp  main_plugin_logic.cc  main_plugin_logic.hpp  register_plugin.cc
examples/server/plugins/plugin_BasicCmdArgs/: README.md
examples/server/plugins/plugin_BasicCmdArgs/conf/: BasicCmdArgs.conf
examples/server/plugins/plugin_BasicCmdArgs/src/: main_plugin_constants.cc  main_plugin_constants.hpp  main_plugin_interface.cc  main_plugin_interface.hpp  main_plugin_logic.cc  main_plugin_logic.hpp  register_plugin.cc
examples/server/plugins/plugin_BasicConsoleCommands/conf/: BasicConsoleCommands.conf
examples/server/plugins/plugin_BasicConsoleCommands/src/: main_plugin_constants.cc  main_plugin_constants.hpp  main_plugin_interface.cc  main_plugin_interface.hpp  main_plugin_logic.cc  main_plugin_logic.hpp  register_plugin.cc
examples/server/plugins/plugin_BasicTerminalCommands/: README.md
examples/server/plugins/plugin_BasicTerminalCommands/conf/: BasicTerminalCommands.conf
examples/server/plugins/plugin_BasicTerminalCommands/src/: main_plugin_constants.cc  main_plugin_constants.hpp  main_plugin_interface.cc  main_plugin_interface.hpp  main_plugin_logic.cc  main_plugin_logic.hpp  register_plugin.cc
examples/server/plugins/plugin_ConsoleTerminal/: README.md
examples/server/plugins/plugin_ConsoleTerminal/conf/: ConsoleTerminal.conf
examples/server/plugins/plugin_ConsoleTerminal/src/: main_plugin_constants.cc  main_plugin_constants.hpp  main_plugin_interface.cc  main_plugin_interface.hpp  main_plugin_logic.cc  main_plugin_logic.hpp  register_plugin.cc
examples/server/plugins/plugin_ExtraLogging/: README.md
examples/server/plugins/plugin_ExtraLogging/conf/: ExtraLogging.conf
examples/server/plugins/plugin_ExtraLogging/src/: main_plugin_constants.cc  main_plugin_constants.hpp  main_plugin_interface.cc  main_plugin_interface.hpp  main_plugin_logic.cc  main_plugin_logic.hpp  register_plugin.cc  scoped_stats_table_updater.cc  scoped_stats_table_updater.hpp
examples/server/plugins/plugin_NetworkEntity/: README.md
examples/server/plugins/plugin_NetworkEntity/conf/: NetworkEntity.conf
examples/server/plugins/plugin_NetworkEntity/src/: main_plugin_constants.cc  main_plugin_constants.hpp  main_plugin_interface.cc  main_plugin_interface.hpp  main_plugin_logic.cc  main_plugin_logic.hpp  network_entity_updater.cc  network_entity_updater.hpp  register_plugin.cc
examples/server/plugins/plugin_NetworkRegistry/: README.md
examples/server/plugins/plugin_NetworkRegistry/conf/: NetworkRegistry.conf
examples/server/plugins/plugin_SignalHandler/: README.md
examples/server/plugins/plugin_TcpServer/: README.md
examples/server/resources/configuration_files/: config.json  plugins.conf
examples/server/shared_lib/: README.md
examples/server/src/: boost_throw_exception.cc  example_server.cc  example_server.hpp  init_env.cc  init_env.hpp  main.cc  server_run_loop_state.cc  server_run_loop_state.hpp  tcp_entity_allocator.cc  tcp_entity_allocator.hpp
examples/server/src/console/: console_feature_list.cc  console_input_updater.cc  console_input_updater.hpp  console_terminal_on_sequence.cc  console_terminal_on_sequence.hpp  console_terminal_plugin.cc  console_terminal_plugin.hpp
examples/server/src/console_terminal/: console_input_updater.cc  console_input_updater.hpp  console_terminal_on_sequence.cc  console_terminal_on_sequence.hpp  console_terminal_plugin.cc  console_terminal_plugin.hpp
examples/server/src/net/: asio_threads_manager.cc  asio_threads_manager.hpp  network_entity_plugin.cc  network_entity_plugin.hpp  network_entity_updater.cc  network_entity_updater.hpp  network_entity_updater_on_sequence.cc  network_entity_updater_on_sequence.hpp
examples/server/src/plugin_manager/: README.md  plugin_interface.hpp  plugin_manager.cc  plugin_manager.hpp
examples/server/src/signal_handler/: signal_handler.cc  signal_handler.hpp
examples/server/src/state/: app_state.cc  app_state.hpp
(+122 files in other folders)
